--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,15 +2,15 @@
       <div class="container header-container">
         <a href="./index.html" class="logo">News</a>
         <nav>
-          <ul class="navbar">
-            <li class="navbar__item">
-              <a href="./index.html" class="navbar__link navbar__link--current">Home</a>
+           <ul class="navlist">
+            <li class="navlist__item">
+              <a href="./index.html" class="navlist__link navlist__link--current">Home</a>
             </li>
-            <li class="navbar__item">
-              <a href="./favorite.html" class="navbar__link">Favorite</a>
+            <li class="navlist__item">
+              <a href="./favorite.html" class="navlist__link">Favorite</a>
             </li>
-            <li class="navbar__item">
-              <a href="./read.html" class="navbar__link">Read</a>
+            <li class="navlist__item">
+              <a href="./read.html" class="navlist__link">Read</a>
             </li>
           </ul>
         </nav>
