--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,7 +8,6 @@ body.darkMode {
     }
 }
 
-
 .header {
     min-height: 81px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -18,72 +17,68 @@ body.darkMode {
     display: flex;
     align-items: center;
 
+    @media screen and (min-width: 768px) {
+        align-items: none;
+    }
 }
+
+
 .logo {
+    font-family: 'Manrope';
+    font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: calc(33 / 24);
-    display: inline-block;
+    color: #111321;
     padding: 24px 0;
-}
+    display: inline-block;
 
-.navbar {
+    @media screen and (min-width: 768px) {
+    font-size: 32px;
+    line-height: calc(44 / 32);
+    padding-top: 32px;
+    padding-bottom: 30px;
+    }
+    @media screen and (min-width: 1280px) {
+        padding: 28px 0;
+        font-size: 42px;
+        line-height: calc(57 / 42);
+    }
+    }
+.navlist {
     display: none;
-        
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        margin-left: 48px;
+        gap: 44px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        margin-left: 102px;
+        gap: 69px;
+    }
 }
 
-.navbar__item {
+.navlist__item {
     padding-top: 48px;
     padding-bottom: 36px;
+
+    @media screen and (min-width: 1280px) {
+        padding-top: 55px;
+        padding-bottom: 33px;
+    }
 }
 
-.navbar__link {
+.navlist__link {
+    
     font-weight: 700;
     line-height: calc(22 / 16);
 
-   
-
-    &--current {
-        padding-bottom: 8px;
-        border-bottom: 1px solid var(--accent-color);
-        padding-left: 6px;
-        padding-right: 6px;
-
+    @media screen and (min-width: 768px) {
+        font-size: 18px;
+        line-height: calc(25 / 18);
     }
-
-    &:hover,
-    &:focus {
-        color: var(--accent-color);
-    }
-}
-
-.search-field {
-    margin-left: auto;
-    display: flex;
-    background-color: transparent;
-    height: 31px;  
-}
-
- input {
-     font-family: 'Poppins';
-     font-size: 12px;
-     line-height: calc(21 / 12);
-     letter-spacing: 0.02em;
-     color: var(--text-color);
-     border: none;
-     background: none;
-     outline: none;
-
-     &:focus {
-         color: var(--text-color)
-     }
-
-     &:autofill,
-     &:autofill:hover,
-     &:autofill:focus,
-     &:autofill:active {
-         transition: background-color 9999s, color 9999s;
-     }
 }
 
 
