--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,45 +1,70 @@
 <header class="header">
-      <div class="container header-container">
-        <a href="./index.html" class="logo">News</a>
-        <nav>
-           <ul class="navlist">
-            <li class="navlist__item">
-              <a href="./index.html" class="navlist__link navlist__link--current">Home</a>
-            </li>
-            <li class="navlist__item">
-              <a href="./favorite.html" class="navlist__link">Favorite</a>
-            </li>
-            <li class="navlist__item">
-              <a href="./read.html" class="navlist__link">Read</a>
-            </li>
-          </ul>
-        </nav>
-        <form class="search-field" id="form-field">
-          <button class="search-field__btn" id="form-btn">
-            <svg class="search__icon" width="16" height="15">
-              <use href="./images/sprite.svg#search-icon"></use>
-            </svg>
-          </button>
-          <input type="text" id="search-field__input" placeholder="Search" />
-        </form>
-        <div class="theme">
-          <svg class="theme__svg sun" width="21" height="21">
-            <use href="./images/sprite.svg#sun"></use>
-          </svg>
-          <p class="theme__light">Light</p>
-          <label class="switch">
-            <input type="checkbox" class="switch-checkbox" />
-            <span class="slider round"></span>
-          </label>
-          <p class="theme__dark opacity">Dark</p>
-          <svg class="theme__svg moon" width="21" height="21">
-            <use href="./images/sprite.svg#moon"></use>
-          </svg>
-        </div>
-        <button type="button" class="mobile-button js-open-menu" aria-expanded="false">
-          <svg class="icon" width="24" height="24">
-            <use href="./images/sprite.svg#mobile-menu"></use>
-          </svg>
-        </button>
-      </div>
-    </header>
+	<div class="container header-container">
+
+		<a href="./index.html" class="logo">News</a>
+
+		<nav>
+			<ul class="navlist">
+				<li class="navlist__item">
+					<a href="./index.html" class="navlist__link navlist__link--current">Home</a>
+				</li>
+
+				<li class="navlist__item">
+					<a href="./favorite.html" class="navlist__link">Favorite</a>
+				</li>
+
+				<li class="navlist__item">
+					<a href="./read.html" class="navlist__link">Read</a>
+				</li>
+			</ul>
+		</nav>
+
+		<div class="menu-wrapper">
+			<div class="search-wrapper">
+				<form class="search-form" id="form-field">
+					<label class="search-form__label">
+						<button type="submit" class="search-form__btn" id="form-btn">
+							<svg class="search-form__icon" width="20" height="20">
+								<use href="./images/sprite.svg#icon-search"></use>
+							</svg>
+						</button>
+
+						<input type="text" id="search-form__input" placeholder="Search" />
+					</label>
+				</form>
+
+				<button type="button" class="search-btn" id="search-btn">
+					<svg class="search-form__icon" width="20" height="20">
+						<use href="./images/sprite.svg#icon-search"></use>
+					</svg>
+				</button>
+			</div>
+
+			<div class="theme">
+				<svg class="theme__svg sun" width="21" height="21">
+					<use href="./images/sprite.svg#sun"></use>
+				</svg>
+
+				<p class="theme__light">Light</p>
+
+				<label class="switch">
+					<input type="checkbox" class="switch-checkbox" />
+					<span class="slider round"></span>
+				</label>
+
+				<p class="theme__dark opacity">Dark</p>
+
+				<svg class="theme__svg moon" width="21" height="21">
+					<use href="./images/sprite.svg#moon"></use>
+				</svg>
+			</div>
+
+			<button type="button" class="mobile-button js-open-menu" aria-expanded="false">
+				<svg class="icon" width="24" height="24">
+					<use href="./images/sprite.svg#mobile-menu"></use>
+				</svg>
+			</button>
+		</div>
+
+	</div>
+</header>
