--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,85 +1,299 @@
 body.darkMode {
-    .header {
-        border-bottom: 1px solid rgba(244, 244, 244, 0.2);
-    }
+  .header {
+    border-bottom: 1px solid rgba(244, 244, 244, 0.2);
+  }
 
-    .theme__dark {
-        opacity: 1;
-    }
+  .theme__dark {
+    opacity: 1;
+  }
 }
 
 .header {
-    min-height: 81px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  min-height: 81px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .header-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    @media screen and (min-width: 768px) {
-        align-items: none;
-    }
+  @media screen and (min-width: 768px) {
+    align-items: none;
+  }
 }
 
-
 .logo {
-    font-family: 'Manrope';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: calc(33 / 24);
-    color: #111321;
-    padding: 24px 0;
-    display: inline-block;
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: calc(33 / 24);
+  color: #111321;
+  padding: 24px 0;
+  display: inline-block;
 
-    @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     font-size: 32px;
     line-height: calc(44 / 32);
     padding-top: 32px;
     padding-bottom: 30px;
-    }
-    @media screen and (min-width: 1280px) {
-        padding: 28px 0;
-        font-size: 42px;
-        line-height: calc(57 / 42);
-    }
-    }
+  }
+  @media screen and (min-width: 1280px) {
+    padding: 28px 0;
+    font-size: 42px;
+    line-height: calc(57 / 42);
+  }
+}
 .navlist {
-    display: none;
+  display: none;
 
-    @media screen and (min-width: 768px) {
-        display: flex;
-        margin-left: 48px;
-        gap: 44px;
-    }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-left: 48px;
+    gap: 44px;
+  }
 
-    @media screen and (min-width: 1280px) {
-        margin-left: 102px;
-        gap: 69px;
-    }
+  @media screen and (min-width: 1280px) {
+    margin-left: 102px;
+    gap: 69px;
+  }
 }
 
 .navlist__item {
-    padding-top: 48px;
-    padding-bottom: 36px;
+  padding-top: 48px;
+  padding-bottom: 36px;
 
-    @media screen and (min-width: 1280px) {
-        padding-top: 55px;
-        padding-bottom: 33px;
-    }
+  @media screen and (min-width: 1280px) {
+    padding-top: 55px;
+    padding-bottom: 33px;
+  }
 }
 
 .navlist__link {
-    
-    font-weight: 700;
-    line-height: calc(22 / 16);
+  font-weight: 700;
+  line-height: calc(22 / 16);
 
-    @media screen and (min-width: 768px) {
-        font-size: 18px;
-        line-height: calc(25 / 18);
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+    line-height: calc(25 / 18);
+  }
+
+  &--current {
+    padding-bottom: 8px;
+    border-bottom: 1px solid #4440f6;
+    padding-left: 6px;
+    padding-right: 6px;
+
+    @media screen and (min-width: 1280px) {
+      padding-bottom: 5px;
     }
+  }
+
+  &:hover,
+  &:focus {
+    color: #4440f6;
+  }
+}
+
+.search-field {
+  margin-left: auto;
+  display: flex;
+  background-color: transparent;
+  height: 31px;
+
+  @media screen and (min-width: 768px) {
+    border: 1px solid var(--text-color);
+    border-radius: 20px;
+    margin-top: 44px;
+    margin-bottom: 31px;
+    width: 213px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin: 0 auto;
+    width: 288px;
+    margin-top: 51px;
+    margin-bottom: 31px;
+  }
+
+  input {
+    font-family: 'Poppins';
+    font-size: 12px;
+    line-height: calc(21 / 12);
+    letter-spacing: 0.02em;
+    color: var(--text-color);
+    border: none;
+    background: none;
+    outline: none;
+    &:focus {
+      color: #111321;
+    }
+
+    @media screen and (max-width: 768px) {
+      padding: 0;
+      transition: 0.4s;
+      width: 0;
+    }
+    @media screen and (min-width: 768px) {
+      padding: 5px 0;
+      font-size: 14px;
+      line-height: calc(24 / 14);
+      border: 1px solid #111321;
+      border-radius: 20px;
+    }
+
+    @media screen and (max-width: 768px) {
+      &:hover {
+        margin-top: 1px;
+        border: 1px solid #111321;
+        border-radius: 20px;
+
+        input {
+          width: 125px;
+          padding: 8px 0;
+        }
+      }
+    }
+
+    .search-field__btn {
+      padding: 6px 16px 5px 12px;
+    }
+  }
+}
+
+.search-field__btn {
+  @media screen and (max-width: 768px) {
+    color: #111321;
+    transition: 0.4s;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 8px 19px 8px 14px;
+  }
+}
+
+.theme {
+    display: flex;
+}
+
+.search__icon {
+    fill: #111321;
 }
 
 
-        
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+}
+
+.switch input {
+    display: none;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffff;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border: 1px solid #4440f6;
+}
+
+.slider:before {
+    position: absolute;
+    content: '';
+    height: 16px;
+    width: 16px;
+    left: 1px;
+    bottom: 1px;
+    background-color: #4440f6;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+input:checked+.slider:before {
+    background-color: #ffffff;
+}
+input:checked+.slider {
+    background-color: #4440f6;
+    border: 1px solid #ffffff;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #4440f6;
+}
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(20px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.theme__dark {
+    display: none;
+}
+
+.theme__light {
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .theme {
+        gap: 12px;
+    }
+
+    .theme__svg {
+        display: none;
+    }
+
+
+ .theme__dark {
+     display: block;
+     margin: 0;
+     font-size: 18px;
+     line-height: 1.3;
+
+     color: #5f6775;
+ }
+ .theme__light {
+     display: block;
+     font-size: 18px;
+     line-height: 1.3;
+ }
+
+ .opacityForDark {
+     opacity: 0.4;
+ }
+
+
+ .theme__light {
+     color: #4b48db;
+ }
+
+ 
+
+ .sun {
+     // fill: var(--accent-color);
+     // fill: var(--switcher-accent);
+     fill: #4b48db;
+ }
+
+ .moon {
+     // fill: var(--switcher-gray);
+     fill: #5f6775;
+ }
+
+}
