--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -16,13 +16,18 @@
 
 // Colors in variables:
 $light: #f7f7f7; // light background
-$dark: #2e2e2e; // dark background
+
 $text: #111321; // base text color
 $accent: #4440f6; // icon and activity color
-$switcher-accent: #4b48db;
 $greycolor: #a8a8a8; // ?
 $whitecolor: #fff; // switch light-dark styles color
 $hdbottom: rgba(0, 0, 0, 0.2); // header bottom color
+
+// Colors for switcher-theme
+$switcher-accent: #4b48db;
+$switcher-color: #5f6775;
+$dark-theme-bg: #2e2e2e; // dark background
+$dark-theme-text: #f4f4f4;
 
 // Adaptiv
 
