--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,72 @@
 <header class="header">
+  <div class="mobile-menu visually-hidden">
+    <div class="menu-container">
+      <a href="./index.html" class="logo">News</a>
+      <button class="js-close-button">
+        <svg class="icon-close" width="24px" height="24px">
+          <use href="./images/sprite.svg#icon-menu-close"></use>
+        </svg>
+      </button>
+    </div>
+      <nav class="menu-nav">
+        <ul class="menu-nav__list">
+          <li class="menu-nav__item">
+            <a class="menu-nav__link" href="./index.html">
+            <svg class="menu-nav__icon" width="32" height="32">
+              <use href="./images/sprite.svg#icon-home"></use>
+            </svg>
+            <p class="menu-nav_text">Home</p>
+            </a>
+            <a class="menu-nav__link--arrow" href="./index.html">
+              <svg width="24" height="24">
+                <use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-nav__item">
+            <a class="menu-nav__link" href="./favorite.html">
+              <svg class="menu-nav__icon" width="32" height="32">
+                <use href="./images/sprite.svg#icon-heart-menu"></use>
+              </svg>
+              <p class="menu-nav__text">Favourite</p>
+            </a>
+            <a class="menu-nav__link--arrow" href="./favorite.html">
+              <svg width="24" height="24">
+                <use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-nav__item">
+            <a class="menu-nav__link" href="./read.html">
+              <svg class="menu-nav__icon" width="32" height="32">
+                <use href="./images/sprite.svg#icon-read"></use>
+              </svg>
+              <p class="menu-nav__text">Read</p>
+            </a>
+            <a class="menu-nav__link--arrow" href="./read.html">
+              <svg width="24" height="24">
+                <use href="./images/sprite.svg#icon-mobileMenu-rightArrow"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    <div class="theme-switcher">
+      <svg class="theme-switcher__icon" width="21" height="21">
+        <use href="./images/sprite.svg#icon-sun-active"></use>
+      </svg>
+      <label>
+      <input type="checkbox" class="switcher"/>
+      <span class="check"></span>
+      </label>
+      <svg class="theme-switcher__icon" width="21" height="21">
+        <use href="./images/sprite.svg#icon-moon"></use>
+      </svg>
+    </div>
+  </div>
       <div class="container header-container">
         <a href="./index.html" class="logo">News</a>
-        <nav>
+        <nav class="navigation">
            <ul class="navlist">
             <li class="navlist__item">
               <a href="./index.html" class="navlist__link navlist__link--current">Home</a>
@@ -36,9 +101,14 @@
             <use href="./images/sprite.svg#moon"></use>
           </svg>
         </div>
+        <button type="button" class="search-button">
+          <svg width="20" height="20">
+            <use href="./images/sprite.svg#icon-search"></use>
+          </svg>
+        </button>
         <button type="button" class="mobile-button js-open-menu" aria-expanded="false">
           <svg class="icon" width="24" height="24">
-            <use href="./images/sprite.svg#mobile-menu"></use>
+            <use href="./images/sprite.svg#icon-menu-burger"></use>
           </svg>
         </button>
       </div>
