--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -17,8 +17,15 @@ body.darkMode {
     display: flex;
     align-items: center;
 
+   // justify-content: space-between;
+    padding: 24px 16px;
+
     @media screen and (min-width: 768px) {
-        align-items: none;
+        padding: 32px 16px;
+    }
+
+    @media (min-width: 1280px) {
+        padding: 28px 16px;
     }
 }
 
@@ -30,7 +37,6 @@ body.darkMode {
     font-size: 24px;
     line-height: calc(33 / 24);
     color: #111321;
-    padding: 24px 0;
     display: inline-block;
 
     @media screen and (min-width: 768px) {
@@ -44,7 +50,8 @@ body.darkMode {
         font-size: 42px;
         line-height: calc(57 / 42);
     }
-    }
+}
+
 .navlist {
     display: none;
 
@@ -81,5 +88,19 @@ body.darkMode {
     }
 }
 
+.navigation {
+    display: none;
+}
 
+.search-field {
+    display: none;
+}
+
+.theme {
+    display: none;
+}
+
+.search-button {
+    margin: 0 14px 0 167px;
+}
         
