--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,5 @@
 @import './common';
-
+@import './base/basic';
 
 
 
@@ -10,4 +10,6 @@
 @import './base/reset';
 
 @import './header';
+@import './mobile-menu';
 @import './calendar';
+@import './favourite';
