finish markup serach and switcher

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,23 +1,25 @@
 <header class="header">
 	<div class="container header-container">
 
-		<a href="./index.html" class="logo">News</a>
+		<div class="nav-wrapper">
+			<a href="./index.html" class="logo">News</a>
 
-		<nav>
-			<ul class="navlist">
-				<li class="navlist__item">
-					<a href="./index.html" class="navlist__link navlist__link--current">Home</a>
-				</li>
+			<nav>
+				<ul class="navlist">
+					<li class="navlist__item">
+						<a href="./index.html" class="navlist__link navlist__link--current">Home</a>
+					</li>
 
-				<li class="navlist__item">
-					<a href="./favorite.html" class="navlist__link">Favorite</a>
-				</li>
+					<li class="navlist__item">
+						<a href="./favorite.html" class="navlist__link">Favorite</a>
+					</li>
 
-				<li class="navlist__item">
-					<a href="./read.html" class="navlist__link">Read</a>
-				</li>
-			</ul>
-		</nav>
+					<li class="navlist__item">
+						<a href="./read.html" class="navlist__link">Read</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 
 		<div class="menu-wrapper">
 			<div class="search-wrapper">
