--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -64,9 +64,9 @@
       </svg>
     </div>
   </div>
-      <div class="container header-container">
+      <div class="header-container">
         <a href="./index.html" class="logo">News</a>
-        <nav class="navigation">
+        <nav class="navigation visually-hidden">
            <ul class="navlist">
             <li class="navlist__item">
               <a href="./index.html" class="navlist__link navlist__link--current">Home</a>
