--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -20,7 +20,7 @@ body.darkMode {
    padding: 24px 16px;
 
     @media screen and (min-width: 768px) {
-        padding: 32px 16px;
+        padding: 32px 16px 28px 16px;
     }
 
     @media (min-width: 1280px) {
@@ -41,8 +41,8 @@ body.darkMode {
   @media screen and (min-width: 768px) {
     font-size: 32px;
     line-height: calc(44 / 32);
-    padding-top: 32px;
-    padding-bottom: 30px;
+    padding-top: 0;
+    padding-bottom: 2px;
 
   }
     @media screen and (min-width: 1280px) {
@@ -54,7 +54,7 @@ body.darkMode {
 
 
 .navlist {
-  display: none;
+  
 
   @media screen and (min-width: 768px) {
     display: flex;
@@ -202,9 +202,7 @@ body.darkMode {
 }
 
 
-.navigation {
-    display: none;
-}
+
 
 .search-field {
     display: none;
