--- a/src/sass/_favourite.scss
+++ b/src/sass/_favourite.scss
@@ -1,14 +1,14 @@
-// .container {
-//     padding: 40px 16px 60px 16px;
+.container {
+	padding: 40px 16px 60px 16px;
 
-//     @media (min-width: 768px) {
-//         padding: 48px 16px 100px 16px;
-//     }
+	@media (min-width: 768px) {
+		padding: 48px 16px 100px 16px;
+	}
 
-//     @media (min-width: 1280px) {
-//         padding: 60px 16px 300px 16px;
-//     }
-// }
+	@media (min-width: 1280px) {
+		padding: 60px 16px 300px 16px;
+	}
+}
 
 .favourite-item:not(:last-child) {
 	margin-bottom: 28px;
