--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -267,8 +267,8 @@ body.dark {
 	color: $switcher-accent;
 	transition: color ease-in 250ms;
 }
-.switch {
-}
+//.switch {
+//}
 .switch-checkbox {
 	appearance: none;
 	visibility: none;
