--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,8 @@
 
 
 @import './utils/variables';
+@import './utils/category';
+@import './utils/news';
 
 @import './base/fonts';
 @import './base/reset';
