--- a/src/partials/categories_calendar.html
+++ b/src/partials/categories_calendar.html
@@ -1,10 +1,38 @@
 <section class="container categories-calendar">
-<div class="categories">
-<p>Categories</p>
-
-</div>
-
-
+    <div class="category">
+        <ul class="category__list">
+              <li class="category__item">Admin</li>
+              <li class="category__item">Arts</li>
+              <li class="category__item">Automobiles</li>
+              <li class="category__item">Books</li>
+              <li class="category__item">Briefing</li>
+              <li class="category__item">Business</li>
+        </ul>
+        <div class="category__others-container">
+          <button class="category__others-button">
+            <span class="category__text">Others</span>
+            <svg></svg>
+          </button>
+          <div class="category__others-div">
+           
+            <ul class="category__others-list">
+                <li class="category__others-list-item"><button class="category__others-list-button">Climate</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Corrections</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Crosswords & Games</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Education</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">En Español</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Fashion</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Food</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Guides</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Health</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Home & Garden</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Home Page</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Job Market</button></li>
+                <li class="category__others-list-item"><button class="category__others-list-button">Lens</button></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
 <div class="calendar">
 <p class="calendar__text">Search date news</p>
