--- a/src/partials/newsgrid.html
+++ b/src/partials/newsgrid.html
@@ -1,3 +1,45 @@
 <section class="newsgrid">
-  <div class="container">Grid of news and pagination.</div>
+  <div class="news__container">
+    <ul class="list-news">
+       <!-- место для динамического списка -->
+       <li class="list-news__item "></li>
+       <li class="list-news__item "></li>
+       <li class="list-news__item "></li>
+       <li class="list-news__item "></li>
+       <li class="list-news__item "></li>
+       <li class="list-news__item "></li>
+       <li class="list-news__item "></li>
+       <li class="list-news__item "></li>
+       <li class="list-news__item "></li>
+    </ul>
+    <div class="page-container">
+      <div class="pages">
+        <button class="pages__btn-prev">
+          <a href="#">
+            <svg></svg>
+            <span class="pages__numbers-btn-text">Prew</span>
+          </a>
+        </button>
+        <div class="pages__numbers">
+          <ul class="pages__numbers-list">
+              <li class="pages__numbers-item active">
+                  <a href="#" class="pages__numbers-link">1</a>
+              </li>
+              <li class="pages__numbers-item">
+                  <a href="#" class="pages__numbers-link">2</a>
+              </li>
+              <li class="pages__numbers-item">
+                  <a href="#" class="pages__numbers-link">3</a>
+              </li>
+          </ul>
+        </div>
+        <button class="pages__numbers-btn-next">
+          <a href="#" class="pages__numbers-btn-link">
+            <span class="pages__numbers-btn-text">Next</span>
+            <svg></svg>
+          </a>
+        </button>
+      </div>
+    </div>
+    </div>
 </section>
