--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,9 @@
 @import "./base/basic";
 
 @import "./utils/variables";
+@import "./utils/category";
+@import "./utils/news";
+
 
 @import "./base/fonts";
 @import "./base/reset";
