One container for all sections.

--- a/src/sass/_favourite.scss
+++ b/src/sass/_favourite.scss
@@ -1,33 +1,33 @@
-.container {
-	padding: 40px 16px 60px 16px;
+.favorite {
+  padding: 40px 0 60px 0;
 
-	@media (min-width: 768px) {
-		padding: 48px 16px 100px 16px;
-	}
+  @media (min-width: 768px) {
+    padding: 48px 0 100px 0;
+  }
 
-	@media (min-width: 1280px) {
-		padding: 60px 16px 300px 16px;
-	}
+  @media (min-width: 1280px) {
+    padding: 60px 0 300px 0;
+  }
 }
 
 .favourite-item:not(:last-child) {
-	margin-bottom: 28px;
+  margin-bottom: 28px;
 
-	@media (min-width: 768px) {
-		margin: 0;
-	}
+  @media (min-width: 768px) {
+    margin: 0;
+  }
 }
 
 .favourite-list {
-	@media (min-width: 768px) {
-		display: flex;
-		justify-content: space-between;
-		flex-wrap: wrap;
-		gap: 30px;
-	}
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 
-	@media (min-width: 1280px) {
-		row-gap: 40px;
-		column-gap: 31.5px;
-	}
+  @media (min-width: 1280px) {
+    row-gap: 40px;
+    column-gap: 31.5px;
+  }
 }
