--- a/src/partials/categories_calendar.html
+++ b/src/partials/categories_calendar.html
@@ -1,101 +1,132 @@
 <section class="container categories-calendar">
-    <div class="category">
-        <ul class="category__list">
-              <li class="category__item">Admin</li>
-              <li class="category__item">Arts</li>
-              <li class="category__item">Automobiles</li>
-              <li class="category__item">Books</li>
-              <li class="category__item">Briefing</li>
-              <li class="category__item">Business</li>
+  <div class="category">
+    <ul class="category__list">
+      <li class="category__item">Admin</li>
+      <li class="category__item">Arts</li>
+      <li class="category__item">Automobiles</li>
+      <li class="category__item">Books</li>
+      <li class="category__item">Briefing</li>
+      <li class="category__item">Business</li>
+    </ul>
+    <div class="category__others-container">
+      <button class="category__others-button">
+        <span class="category__text">Others</span>
+        <svg></svg>
+      </button>
+      <div class="category__others-div">
+        <ul class="category__others-list">
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Climate</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Corrections</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">
+              Crosswords & Games
+            </button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Education</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">En Español</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Fashion</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Food</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Guides</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Health</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Home & Garden</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Home Page</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Job Market</button>
+          </li>
+          <li class="category__others-list-item">
+            <button class="category__others-list-button">Lens</button>
+          </li>
         </ul>
-        <div class="category__others-container">
-          <button class="category__others-button">
-            <span class="category__text">Others</span>
-            <svg></svg>
-          </button>
-          <div class="category__others-div">
-           
-            <ul class="category__others-list">
-                <li class="category__others-list-item"><button class="category__others-list-button">Climate</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Corrections</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Crosswords & Games</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Education</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">En Español</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Fashion</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Food</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Guides</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Health</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Home & Garden</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Home Page</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Job Market</button></li>
-                <li class="category__others-list-item"><button class="category__others-list-button">Lens</button></li>
-            </ul>
-          </div>
-        </div>
       </div>
-      
+    </div>
+  </div>
 
-<div class="calendar">
-<p class="calendar__text">Search date news</p>
+  <div class="calendar">
+    <p class="calendar__text">Search date news</p>
 
-    <div class="calendar__wrapper-input" >
-        <svg class="calendar__icon-calendar" width="20" height="20">
-            <use href="./images/sprite.svg#icon-calendar"></use>
-        </svg>
+    <div class="calendar__wrapper-input">
+      <svg class="calendar__icon-calendar" width="20" height="20">
+        <use href="./images/sprite.svg#icon-calendar"></use>
+      </svg>
 
-        <input type="button" readonly class="calendar__input" 
+      <input
+        type="button"
+        readonly
+        class="calendar__input"
         value="Select a date..."
-        placeholder="Select a date..." data-cal-modal-open-close>
+        placeholder="Select a date..."
+        data-cal-modal-open-close
+      />
 
-        <svg class="calendar__icon-arrows calendar__icon-opened" width="15" height="9">
-            <use href="./images/sprite.svg#icon-calendarArrow-opened"></use>
-        </svg>
-        <svg class="calendar__icon-arrows calendar__icon-closed display-none" width="15" height="9">
-            <use href="./images/sprite.svg#icon-calendarArrow-closed"></use>
-        </svg>
+      <svg
+        class="calendar__icon-arrows calendar__icon-opened"
+        width="15"
+        height="9"
+      >
+        <use href="./images/sprite.svg#icon-calendarArrow-opened"></use>
+      </svg>
+      <svg
+        class="calendar__icon-arrows calendar__icon-closed display-none"
+        width="15"
+        height="9"
+      >
+        <use href="./images/sprite.svg#icon-calendarArrow-closed"></use>
+      </svg>
     </div>
 
     <div class="calendar__modal is-hidden" data-calendar-modal>
-    
-        <div class="calendar__month-wrapper">
-            <p class="current-month"></p>
-            <button type="button" class="icon-month-forward icon-calendar-arrow">
-                <svg width="7" height="12">
-                    <use href="./images/sprite.svg#icon-month-forward"></use>
-                </svg>
-            </button>
-            <div class="calendar__btn-wrapper"> 
-                <button id="prev" type="button" class="icon-calendar-arrow">
-                    <svg width="9" height="17">
-                        <use href="./images/sprite.svg#icon-calendar-prev"></use>
-                    </svg>
-                </button>
-                <button id="next" type="button" class="icon-calendar-arrow">
-                    <svg width="9" height="17">
-                        <use href="./images/sprite.svg#icon-calendar-next"></use>
-                    </svg>
-                </button>
-            </div>
-
+      <div class="calendar__month-wrapper">
+        <p class="current-month"></p>
+        <button type="button" class="icon-month-forward icon-calendar-arrow">
+          <svg width="7" height="12">
+            <use href="./images/sprite.svg#icon-month-forward"></use>
+          </svg>
+        </button>
+        <div class="calendar__btn-wrapper">
+          <button id="prev" type="button" class="icon-calendar-arrow">
+            <svg width="9" height="17">
+              <use href="./images/sprite.svg#icon-calendar-prev"></use>
+            </svg>
+          </button>
+          <button id="next" type="button" class="icon-calendar-arrow">
+            <svg width="9" height="17">
+              <use href="./images/sprite.svg#icon-calendar-next"></use>
+            </svg>
+          </button>
         </div>
+      </div>
 
-        <ul class="weeks">
-            <li>Mo</li>
-            <li>Tu</li>
-            <li>We</li>
-            <li>Th</li>
-            <li>Fr</li>
-            <li>Sa</li>
-            <li>Su</li>
-        </ul>
-        
-        <ul class="days"></ul>
+      <ul class="weeks">
+        <li>Mo</li>
+        <li>Tu</li>
+        <li>We</li>
+        <li>Th</li>
+        <li>Fr</li>
+        <li>Sa</li>
+        <li>Su</li>
+      </ul>
 
-
+      <ul class="days"></ul>
     </div>
-
-</div>
-
-
-
+  </div>
 </section>
