added categories base api

--- a/src/partials/categories_calendar.html
+++ b/src/partials/categories_calendar.html
@@ -1,5 +1,5 @@
 <section class="container categories-calendar">
-<div class="categories">
+<div class="categories js-categories">
 <p>Categories</p>
 
 </div>
