fix bags container

--- a/src/sass/_read-page.scss
+++ b/src/sass/_read-page.scss
@@ -20,6 +20,21 @@ body.dark {
 
 }
 
+.read-page {
+    padding-top: 40px;
+    padding-bottom: 140px;
+
+    @media screen and (min-width: $tablet){
+        padding-top: 48px;
+        padding-bottom: 140px;
+    }
+
+    @media screen and (min-width: $desktop){
+        padding-top: 60px;
+        padding-bottom: 140px;
+    }
+}
+
 .undefined {
     display: flex;
     flex-direction: column;
@@ -32,8 +47,13 @@ body.dark {
         letter-spacing: -0.01em;
         
         @media screen and (min-width:$tablet) {
+            margin-top: 40px;
             font-size: 40px;
             line-height: 1.38;
+        }
+
+        @media screen and (min-width:$desktop){
+            margin-top: 54px;
         }
     }
 
@@ -56,8 +76,16 @@ body.dark {
 .read-list {
 
     &__item {
-        margin-bottom: 60px;
+        margin-bottom: 40px;
         border-bottom: 1px solid #929292;
+
+        @media screen and (min-width:$tablet){
+            margin-bottom: 48px;
+        }
+
+        @media screen and (min-width: $desktop) {
+            margin-bottom: 60px;
+        }
     }
 
     &__button {
