added base news

--- a/src/partials/newsgrid.html
+++ b/src/partials/newsgrid.html
@@ -1,16 +1,7 @@
 <section class="newsgrid">
   <div class="news__container">
-    <ul class="list-news">
+    <ul class="list-news js-list-new">
       <!-- место для динамического списка -->
-      <li class="list-news__item"></li>
-      <li class="list-news__item"></li>
-      <li class="list-news__item"></li>
-      <li class="list-news__item"></li>
-      <li class="list-news__item"></li>
-      <li class="list-news__item"></li>
-      <li class="list-news__item"></li>
-      <li class="list-news__item"></li>
-      <li class="list-news__item"></li>
     </ul>
     <div class="page-container">
       <div class="pages">
