--- a/src/sass/utils/_category.scss
+++ b/src/sass/utils/_category.scss
@@ -90,15 +90,15 @@ transform: translateY(-100%);
 transition-duration: 250ms;
 transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.calendar__text{
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 25px;
+// .calendar__text{
+//     font-weight: 700;
+//     font-size: 18px;
+//     line-height: 25px;
      
-    color: #111321;
-    margin-left: 111px;
-    margin-right: 37px;
-}
+//     color: #111321;
+//     margin-left: 111px;
+//     margin-right: 37px;
+// }
 .category__others-div{
     z-index: 2;
     pointer-events: none;
