adding news-card to localStorage - favorite

--- a/src/partials/newscard.html
+++ b/src/partials/newscard.html
@@ -7,11 +7,12 @@
     height="395"
   />
   <p class="news-card__category">Job searching</p>
-  <p class="news-card__add-favorite">
-    Add to favorite<svg class="news-card__icon" width="16" height="16">
+  <button type="button" class="js-to-fav">
+  <p class="news-card__add-favorite">Add to favorite</p>
+    <svg class="news-card__icon" width="16" height="16">
       <use href="./images/sprite.svg#icon-heart-transparent"></use>
     </svg>
-  </p>
+  </button>
   <h3 class="news-card__title">
     8 tips for passing an online interview that will help you get a job
   </h3>
@@ -20,7 +21,7 @@
     with the job prospects offered by these...
   </p>
   <div class="news-card__details">
-    <a class="news-card__date-link link" href="">20/02/23</a>
-    <a class="news-card__news-link link" href="">Read more</a>
+    <a class="news-card__date-link link" href="#">20/02/23</a>
+    <a class="news-card__news-link link" href="#">Read more</a>
   </div>
 </div>
