--- a/src/partials/categories_calendar.html
+++ b/src/partials/categories_calendar.html
@@ -29,10 +29,8 @@
       <input
         type="button"
         readonly
-        class="calendar__input"
+        class="calendar__input js-calendar-input"
         value="Select a date..."
-        placeholder="Select a date..."
-        data-calendar-input
       />
 
       <svg
@@ -77,6 +75,7 @@
         <li>Mo</li>
         <li>Tu</li>
         <li>We</li>
+        <li>Th</li>
         <li>Fr</li>
         <li>Sa</li>
         <li>Su</li>
