bugfix in category categories

--- a/src/partials/categories_calendar.html
+++ b/src/partials/categories_calendar.html
@@ -12,13 +12,12 @@
 			</div>
 			<button class="others__button js-others-btn">
 				<span class="others__text-btn">Others</span>
-				<svg width="14" height="14">
-					<use class="others__icon-open" href="./images/sprite.svg#icon-categoriesList-closed"></use>
-					<use class="others__icon-close" href="./images/sprite.svg#icon-categoriesList-opened"></use>
+				<svg class="others__icon-open" width="14" height="14">
+					<use href="./images/sprite.svg#icon-categoriesList-closed"></use>
 				</svg>
-				<!-- <svg class="others__icon-close" width="14" height="14">
+				<svg class="others__icon-close" width="14" height="14">
 					<use href="./images/sprite.svg#icon-categoriesList-opened"></use>
-				</svg> -->
+				</svg>
 			</button>
 		</div>
 	</div>
