finished categories style

--- a/src/partials/categories_calendar.html
+++ b/src/partials/categories_calendar.html
@@ -11,7 +11,7 @@
 				</ul>
 			</div>
 			<button class="others__button js-others-btn">
-				<span class="others__text-btn">Others</span>
+				<span class="others__text-btn js-text-btn">Others</span>
 				<svg class="others__icon-open" width="14" height="14">
 					<use href="./images/sprite.svg#icon-categoriesList-closed"></use>
 				</svg>
