--- a/src/sass/_calendar.scss
+++ b/src/sass/_calendar.scss
@@ -1,5 +1,5 @@
 .categories-calendar {
-	// max-width: $desktop;
+	max-width: $desktop;
 	display: flex;
 	padding-top: 28px;
 	padding-bottom: 28px;
