--- a/src/sass/utils/_category.scss
+++ b/src/sass/utils/_category.scss
@@ -1,11 +1,25 @@
 .category {
 	display: flex;
 	position: relative;
-	gap: 16px;
+
+	@media screen and (min-width: $tablet) {
+		gap: 14px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		gap: 16px;
+	}
 }
 .category__list {
 	display: flex;
-	gap: 16px;
+
+	@media screen and (min-width: $tablet) {
+		gap: 14px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		gap: 16px;
+	}
 }
 .category__item {
 }
@@ -39,7 +53,7 @@
 	display: flex;
 	align-items: center;
 	gap: 10px;
-	padding: 7.5px 24.5px;
+	padding: 7.5px 13px;
 
 	cursor: pointer;
 
@@ -47,6 +61,10 @@
 	color: $accent;
 	border: 1px solid #4440f7;
 	border-radius: 20px;
+
+	@media screen and (min-width: $tablet) {
+		padding: 7.5px 24.5px;
+	}
 }
 
 .others__text-btn {
